# TFG-

./: .gitignore  README.md  arquitectura.mmd
backend/: README.md  combined_meta.pkl  dataset.py  explorar_datos.py  label_encoder.pkl  main.py  model.py  preprocessor.pkl  pyproject.toml  requirements.txt  run_train.fish  run_train.sh  train.py
frontend/: angular.json  package.json  pnpm-lock.yaml
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.html  app.spec.ts  app.ts
saved_chat_model/: tokenizer.json  tokenizer_config.json
