[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Backend con IA para el TFG"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "nltk",
    "fastapi",
    "uvicorn",
    "numpy",
    "datasets>=3.1.0",
   "sentence-transformers"
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
