[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Backend con IA para el TFG"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "nltk",
    "fastapi",
    "uvicorn",
    "numpy",
    "datasets>=3.1.0",
    "sentence-transformers",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "kagglehub>=1.0.1",
    "transformers>=5.3.0",
    "accelerate>=1.13.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
